--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                            <span class="navbar-toggler-icon"></span>
                            </button>
                            <div class="collapse navbar-collapse" id="navbarsExample04">
-                              <h1> hola</h1>
+                              <h1>hola hice un cambio</h1>
                               <ul class="navbar-nav mr-auto">
                                  <li class="nav-item active">
                                     <a class="nav-link" href="about.html"> Legalizacion  </a>
